--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  stress-ng-0.11.18.tar.xz: 7e2774ae5f047e63f4cccf1c93f67c93669b24d5
+  stress-ng-0.14.03.tar.gz: d1c82edc50adf768c18328a31992d49a4ac08257
